fix card spacing in team component

--- a/src/pages/team.css
+++ b/src/pages/team.css
@@ -1,4 +1,8 @@
-.css-1f89vao-MuiStack-root  div:last-child {
-  margin-top: 8px;
+.css-1sj2t5c:nth-child(5) {
+  margin-top: 16px;
   margin-left:0px;
+}
+.css-1sj2t5c:nth-child(6) {
+  margin-top: 16px;
+  margin-left: 16px;
 }
